logs/validate.20260326-161328.log
error[E0599]: no method named `is_finite_spec` found for type `f64` in the current scope
   --> src/Chap65/KruskalStEph.rs:189:65
    |
189 |                 #[trigger] graph@.A.contains((u, w, wt)) ==> wt.is_finite_spec(),
    |                                                                 ^^^^^^^^^^^^^^
    |
   --> vstd/float.rs:18:12
    |
    = note: the method is available for `f64` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `FloatBitsProperties` which provides `is_finite_spec` is implemented but not in scope; perhaps you want to import it
    |
  9 +     use vstd::float::FloatBitsProperties;
    |
help: there is a method `is_infinite_spec` with a similar name
    |
189 |                 #[trigger] graph@.A.contains((u, w, wt)) ==> wt.is_infinite_spec(),
    |                                                                    ++

error[E0599]: no method named `is_finite_spec` found for type `f64` in the current scope
   --> src/Chap65/KruskalStEph.rs:264:33
    |
264 |                     assert(wt_v.is_finite_spec());
    |                                 ^^^^^^^^^^^^^^
    |
   --> vstd/float.rs:18:12
    |
    = note: the method is available for `f64` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `FloatBitsProperties` which provides `is_finite_spec` is implemented but not in scope; perhaps you want to import it
    |
  9 +     use vstd::float::FloatBitsProperties;
    |
help: there is a method `is_infinite_spec` with a similar name
    |
264 |                     assert(wt_v.is_infinite_spec());
    |                                    ++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
Elapsed: 6s
Sampled Memory Usage: peak rust_verify RSS: 394MB, peak z3 RSS: 0MB, min free: 22996MB
Sampled CPU Usage: rust_verify: 4s, z3 children: 0s
